--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-	"name": "fcc-bootstrap",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"engines": {
-		"node": "4.4.5"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/sri85/fcc-boilerplate.git"
-	}
+  "name": "fcc-bootstrap-template",
+  "version": "1.0.0",
+  "license": "UNLICENSED",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "./node_modules/mocha/bin/mocha --exit tests"
+  },
+  "engines": {
+    "node": "4.4.5"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "jasmine-node": "^1.14.5",
+    "mocha": "^5.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sri85/fcc-boilerplate.git"
+  }
 }
