--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "jasmine-node": "^1.14.5",
     "mocha": "^5.0.4"
   },
