--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fcc-bootstrap-template",
+  "name": "fcc-url-shortener",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "dependencies": {
@@ -11,7 +11,7 @@
     "test": "./node_modules/mocha/bin/mocha --exit tests "
   },
   "engines": {
-    "node": "4.4.5"
+    "node": ">=4.4.5"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -24,6 +24,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sri85/fcc-boilerplate.git"
+    "url": "https://github.com/sri85/url-shortener.git"
   }
 }
