--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-boom": "^2.0.0",
+    "mongoose": "^5.0.12"
   },
   "main": "server.js",
   "scripts": {
