--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "./node_modules/mocha/bin/mocha --exit tests "
+    "test": "./node_modules/mocha/bin/mocha --exit --timeout 120000 tests "
   },
   "engines": {
     "node": ">=4.4.5"
@@ -22,7 +22,9 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "jasmine-node": "^1.14.5",
-    "mocha": "^5.0.4"
+    "mocha": "^5.0.4",
+    "mockgoose": "^7.3.5",
+    "mongodb-memory-server": "^1.7.3"
   },
   "repository": {
     "type": "git",
